[package]
name = "einhyrningsins"
version = "0.1.0"
authors = ["bnewbold <bnewbold@robocracy.org>"]

[dependencies]
nix = "0.7"
log = "0.3"
env_logger = "0.3"
getopts = "^0.2"
timer = "0.1"
time = "0.1"
chrono = "0.2"
chan = "0.1"
chan-signal = "0.1"
slog = "1.0"
slog-envlogger = "0.5"
json = "*"
url = "1.2"

[replace]
"chan-signal:0.1.6" = { git = 'https://github.com/bnewbold/chan-signal' }

